--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ title: Autumn Thoughts
 email: anuva312@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hii people, this is Anu.
-  Or Autumn as I had caled myself in the title.
+  Or Autumn as I had called myself in the title.
   Here's a place for some of my crazy as well as non-crazy yet not-so-serious thoughts:)
-  I honestly have no idea on how to write a description for this blog XD...
+  I honestly have no idea about how to write a description for this blog XD...
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: this_is_anuva
